# virtue

./: .gitignore  .rustfmt.toml  CITATION.cff  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  test_shim.rs  utils.rs
src/generate/: gen_enum.rs  gen_struct.rs  generate_item.rs  generate_mod.rs  generator.rs  impl.rs  impl_for.rs  mod.rs  stream_builder.rs
src/parse/: attributes.rs  body.rs  data_type.rs  generics.rs  mod.rs  utils.rs  visibility.rs
test/: Cargo.toml
test/derive/: Cargo.toml
