[package]
name = "virtue-next"
version = "0.0.20"
edition = "2021"
description = "A sinless derive macro helper"
license = "MIT or Apache-2.0"
documentation = "https://docs.rs/virtue"
repository = "https://github.com/Apich-Organization/virtue"
readme = "README.md"

[dev-dependencies]
proc-macro2 = "1.0"

[dependencies]
proc-macro2 = { version = "1.0", optional = true }

[workspace]
members = ["test", "test/derive"]
